--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gujarati Book Store</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <meta charset="UTF-8">
+  <title>Ancient Indian Stepwells</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Gujarati Book Collection</h1>
-  <div id="book-container"></div>
+  <h1>Historic Places</h1>
+  <div id="stepwell-container"></div>
 
   <script src="js/script.js"></script>
 </body>
