--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Ancient Indian Stepwells</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Nature & History Explorer</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>Historic Places</h1>
-  <div id="stepwell-container"></div>
+  <h1>🌍 Natural & Historical Places</h1>
+  <div id="places-container"></div>
 
   <script src="js/script.js"></script>
 </body>
