--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>🌍 Natural & Historical Places</h1>
+  <h1>Natural & Historical Places</h1>
   <div id="places-container"></div>
 
   <script src="js/script.js"></script>
